--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "backend for chess game",
   "main": "index.js",
   "author": "A-Yehia19",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node index.js"
   },
